fix java compatibility