@@ -85,20 +85,20 @@ public class Lane {
             for(int j = 0; j < currLane.size(); j++){
                 RoadSection currSection = currLane.get(j);
 
-                if(!currLane.getFirst().equals(currSection)){
+                if(!currLane.get(0).equals(currSection)){
                     currSection.previous = currLane.get(j-1);
                 }
 
-                if(!currLane.getLast().equals(currSection)){
+                if(!currLane.get(currLane.size() - 1).equals(currSection)){
                     currSection.next = currLane.get(j+1);
                 }
 
                 if(subLanes.size() != 1){
-                    if(!subLanes.getFirst().equals(currLane)){
+                    if(!subLanes.get(0).equals(currLane)){
                         currSection.left = subLanes.get(i-1).get(j);
                     }
 
-                    if(!subLanes.getLast().equals(currLane)){
+                    if(!subLanes.get(subLanes.size() - 1).equals(currLane)){
                         currSection.right = subLanes.get(i+1).get(j);
                     }
                 }
@@ -151,10 +151,10 @@ public class Lane {
         }
     }
 
-    public int getSnowLevel(){return subLanes.getLast().getLast().snowLevel;}
-    public int getIceLevel(){return subLanes.getLast().getLast().iceLevel;}
-    public int getRockLevel(){return subLanes.getLast().getLast().rockLevel;}
-    public Road.Type getType(){return subLanes.getLast().getLast().type;}
+    public int getSnowLevel(){List<RoadSection> lastSubLane = subLanes.get(subLanes.size() - 1); return lastSubLane.get(lastSubLane.size() - 1).snowLevel;}
+    public int getIceLevel(){List<RoadSection> lastSubLane = subLanes.get(subLanes.size() - 1); return lastSubLane.get(lastSubLane.size() - 1).iceLevel;}
+    public int getRockLevel(){List<RoadSection> lastSubLane = subLanes.get(subLanes.size() - 1); return lastSubLane.get(lastSubLane.size() - 1).rockLevel;}
+    public Road.Type getType(){List<RoadSection> lastSubLane = subLanes.get(subLanes.size() - 1); return lastSubLane.get(lastSubLane.size() - 1).type;}
 
     public List<Vehicle> getAllVehicles(){
         return subLanes.stream()
